[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/fragment_forge/Competition.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 15
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 12
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[node name="Competition" type="PanelContainer"]
margin_left = 314.735
margin_top = -651.828
margin_right = 944.735
margin_bottom = -579.828
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="VBC" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 623.0
margin_bottom = 78.0

[node name="HBC" type="HBoxContainer" parent="VBC"]
margin_right = 616.0
margin_bottom = 25.0

[node name="Title" type="Label" parent="VBC/HBC"]
margin_right = 526.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Demo Competition Title"
align = 1

[node name="FirstPlace" type="Label" parent="VBC/HBC"]
margin_left = 530.0
margin_top = 3.0
margin_right = 616.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "First Place"
align = 1

[node name="HBC2" type="HBoxContainer" parent="VBC"]
margin_top = 29.0
margin_right = 616.0
margin_bottom = 48.0

[node name="Description" type="Label" parent="VBC/HBC2"]
margin_top = 1.0
margin_right = 154.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.823529, 0.721569, 0.0431373, 1 )
text = "Tournament Description"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="VBC/HBC2"]
margin_left = 158.0
margin_right = 503.0
margin_bottom = 19.0
size_flags_horizontal = 3

[node name="SecondPlace" type="Label" parent="VBC/HBC2"]
margin_left = 507.0
margin_right = 616.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Second Place"
align = 1

[node name="HBC3" type="HBoxContainer" parent="VBC"]
margin_top = 52.0
margin_right = 616.0
margin_bottom = 71.0

[node name="DemoValue" type="Label" parent="VBC/HBC3"]
margin_right = 11.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="VBC/HBC3"]
margin_left = 15.0
margin_right = 521.0
margin_bottom = 19.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThirdPlace" type="Label" parent="VBC/HBC3"]
margin_left = 525.0
margin_right = 616.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Third Place"
align = 1
